[project]
name = "pfaeff-comfyui"
description = "Nodes: AstropulsePixelDetector, BackgroundRemover, ImagePadForBetterOutpaint, InpaintingPipelineLoader, Inpainting, ..."
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python-headless", "diffusers"]

[project.urls]
Repository = "https://github.com/Pfaeff/pfaeff-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "pfaeff-comfyui"
Icon = ""
